# libigl_test

./: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  main.cc  mesh.cc  mesh.h
